--- a/DAY44/009/package.json
+++ b/DAY44/009/package.json
@@ -10,9 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "express-session": "^1.17.2",
+    "helmet": "^5.0.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
